--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,18 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
     namespace 'com.plcoding.widgetswithcompose'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.plcoding.widgetswithcompose"
         minSdk 24
-        targetSdk 33
+        targetSdk 34
         versionCode 1
         versionName "1.0"
 
@@ -27,11 +29,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose true
@@ -48,6 +50,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.core:core-splashscreen:1.0.1'
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
@@ -63,4 +66,31 @@ dependencies {
 
     implementation 'androidx.glance:glance:1.0.0-alpha05'
     implementation "androidx.glance:glance-appwidget:1.0.0-alpha05"
+
+    // Room
+    implementation "androidx.room:room-runtime:2.6.1"
+    implementation "androidx.room:room-ktx:2.6.1"
+    kapt "androidx.room:room-compiler:2.6.1"
+
+    // DataStore
+    implementation "androidx.datastore:datastore-preferences:1.0.0"
+
+    // Hilt
+    implementation "com.google.dagger:hilt-android:2.48"
+    kapt "com.google.dagger:hilt-compiler:2.48"
+    implementation 'androidx.hilt:hilt-navigation-compose:1.1.0'
+
+    // Navigation
+    implementation "androidx.navigation:navigation-compose:2.7.6"
+
+    // Serialization
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.6.0"
+}
+
+kapt {
+    correctErrorTypes true
+}
+
+kotlin {
+    jvmToolchain(17)
 }
