feat: Introduce Habits Glance widget, category-specific quote browsing, and update database schema with `isRead` status.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.SplashScreen">
+            android:theme="@style/SplashScreenTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -40,6 +40,16 @@
             <meta-data
                 android:name="android.appwidget.provider"
                 android:resource="@xml/favorite_quotes_widget_info" />
+        </receiver>
+        <receiver
+            android:name=".HabitsWidgetReceiver"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/habits_widget_info" />
         </receiver>
     </application>
 
