feat: Introduce onboarding, home, and widget feature modules.

--- a/settings.gradle
+++ b/settings.gradle
@@ -17,3 +17,6 @@ include ':app'
 include ':core:designsystem'
 include ':core:data'
 include ':core:domain'
+include ':feature:onboarding'
+include ':feature:home'
+include ':feature:widget'
